--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.1.3",
     "react": "^16.5.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-cookies": "^0.1.0",
     "react-css-transition-replace": "^3.0.3",
     "react-dom": "^16.5.0",
     "react-easy-swipe": "0.0.16",
